--- a/index.html
+++ b/index.html
@@ -1,7 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html lang="no">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Havsteinlia 10</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f5f7fa;
+      color: #333;
+    }
+    header {
+      background-color: #2c3e50;
+      padding: 1rem;
+      color: white;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      background-color: #34495e;
+    }
+    nav button {
+      background: none;
+      border: none;
+      color: white;
+      padding: 1rem 2rem;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: background-color 0.3s;
+    }
+    nav button:hover {
+      background-color: #2c3e50;
+    }
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 2rem;
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+    h2 {
+      margin-top: 0;
+    }
+    .hidden {
+      display: none;
+    }
+  </style>
+</head>
 <body>
-<h1>Havsteinlia 10</h1>
-<p>Et hjem for deg et hjem for meg</p>
+  <header>
+    Havsteinlia 10
+  </header>
+
+  <nav>
+    <button onclick="showSection('hovedhus')">Hovedhus</button>
+    <button onclick="showSection('hybel')">Hybel</button>
+    <button onclick="showSection('leilighet')">Leilighet</button>
+  </nav>
+
+  <main>
+    <section id="hovedhus">
+      <h2>Informasjon Leilighet</h2>
+      <p>Her kan du legge inn en stor beskrivelse av hovedhuset. Teksten kan inneholde informasjon om størrelse, romfordeling, fasiliteter, beliggenhet og andre relevante detaljer.</p>
+    </section>
+
+    <section id="hybel" class="hidden">
+      <h2>Informasjon Leilighet</h2>
+      <p>Her kan du legge inn en stor beskrivelse av hybelen. Teksten kan inneholde informasjon om størrelse, romfordeling, fasiliteter, beliggenhet og andre relevante detaljer.</p>
+    </section>
+
+    <section id="leilighet" class="hidden">
+      <h2>Informasjon Leilighet</h2>
+      <p>Her kan du legge inn en stor beskrivelse av leiligheten. Teksten kan inneholde informasjon om størrelse, romfordeling, fasiliteter, beliggenhet og andre relevante detaljer.</p>
+    </section>
+  </main>
+
+  <script>
+    function showSection(id) {
+      document.querySelectorAll('main section').forEach(section => {
+        section.classList.add('hidden');
+      });
+      document.getElementById(id).classList.remove('hidden');
+    }
+  </script>
 </body>
 </html>
