--- a/index.html
+++ b/index.html
@@ -76,7 +76,24 @@
 
     <section id="leilighet" class="hidden">
       <h2>Informasjon Leilighet</h2>
-      <p>Her kan du legge inn en stor beskrivelse av leiligheten. Teksten kan inneholde informasjon om størrelse, romfordeling, fasiliteter, beliggenhet og andre relevante detaljer.</p>
+      <p>Info info </p>
+      <ul style="list-style: none; padding: 0;">
+        <li style="margin-bottom: 2rem; display: flex; align-items: flex-start;">
+            <div style="flex: 1;">
+            <h3>Tittel 1</h3>
+            <input type="text" placeholder="Skriv tekst her" style="width: 100%; margin-bottom: 0.5rem;">
+            </div>
+            <img src="https://via.placeholder.com/120" alt="Bilde 1" style="margin-left: 1rem; border-radius: 8px;">
+        </li>
+        <li style="margin-bottom: 2rem; display: flex; align-items: flex-start;">
+            <div style="flex: 1;">
+            <h3>Tittel 2</h3>
+            <input type="text" placeholder="Skriv tekst her" style="width: 100%; margin-bottom: 0.5rem;">
+            </div>
+            <img src="https://via.placeholder.com/120" alt="Bilde 2" style="margin-left: 1rem; border-radius: 8px;">
+        </li>
+        <!-- Legg til flere listeelementer etter behov -->
+      </ul>
     </section>
   </main>
 
